[package]
name = "phtm"
authors = ["Deadbeef <ent3rm4n@gmail.com>"]
version = "1.0.1"
edition = "2015"
description = "Re-exports for common uses of `PhantomData`"
repository = "https://github.com/fee1-dead/phtm"
license = "MIT OR Apache-2.0 OR CC-BY-4.0"
keywords = ["no_std", "no-std", "utility"]
categories = ["data-structures", "no-std", "rust-patterns"]